--- a/Index.html
+++ b/Index.html
@@ -91,7 +91,7 @@
         <button type="button" style="width: 10%; color: red; font-weight: bold; background-color: darkgrey;" onclick="light(5)">Red</button>        
     </p>
     <p> 
-        <button type="button" style="width: 20.4%; color: white; font-weight: bold; background-color: darkgrey;" onclick="light(6)">Flashing Light</button>
+        <button type="button" style="width: 20.4%; color: white; font-weight: bold; background-color: darkgrey;" onclick="light(6)">Let there be Light!!!</button>
     </p>
 </body>
 </html>
